--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -530,7 +530,8 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 .bp-admin-card.section-bp_ld-integration h2:before,
 .bp-admin-card.section-bp_ld_sync-buddypress h2:before,
 .bp-admin-card.section-bp_ld_sync-learndash h2:before,
-.bp-admin-card.section-bp_ld_sync-reports h2:before {
+.bp-admin-card.section-bp_ld_sync-reports h2:before,
+.bp-admin-card.section-bp_ld_course_tab-buddypress h2:before {
 	background-image: url(../../images/admin/icons/logos/learndash.png);
 	background-size: 100% 100%;
 }
