--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1188,6 +1188,9 @@ body.post-type-bp-email .categorydiv label {
     flex: 1;
     min-width: 0;
   }
+  .bp-help-content th:first-child {
+    width: 40%;
+  }
 }
 
 @media screen and (max-width: 781px) {
@@ -1206,6 +1209,9 @@ body.post-type-bp-email .categorydiv label {
   .bp-help-content {
     padding: 2.5em;
     width: 100%;
+  }
+  .bp-help-content th:last-child {
+    display: none;
   }
 }
 
