--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11600,3 +11600,8 @@ div#bp-group-message-content {
   border: 1px solid #E7E9EC;
   border-radius: 3px;
 }
+
+#item-body #group-messages-container .select2-container--default.select2-container--disabled .select2-selection--multiple {
+  background-color: transparent !important;
+  cursor: default;
+}
