T1326 - smaller font for “(Maximum Length: 80)”

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
@@ -1281,7 +1281,7 @@ body .bb-select-container.select2-selection.select2-selection--multiple {
 
 .bbp-forum-form label {
 	color: inherit;
-        display: inline-block;
+    display: inline-block;
 	font-size: 15px;
 	letter-spacing: -0.24px;
 	margin-bottom: 5px;
@@ -1312,4 +1312,5 @@ h2.bbp-form-title.entry-title {
 
 .bbp-forum-title-label span {
 	opacity: 0.6;
+	font-size: 14px;
 }
