--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -397,6 +397,6 @@ div#bp-group-message-content {
 	margin-bottom: 0px;
 }
 
-#item-body #group-messages-container .bb-groups-messages-right.bp-feedback {
+#item-body #group-messages-container .bb-groups-messages-right > .bp-feedback {
 	margin: 20px 20px 0 20px;
 }
