--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -11619,6 +11619,6 @@ div#bp-group-message-content {
   margin-bottom: 0px;
 }
 
-#item-body #group-messages-container .bb-groups-messages-right.bp-feedback {
+#item-body #group-messages-container .bb-groups-messages-right > .bp-feedback {
   margin: 20px 20px 0 20px;
 }
