--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -398,5 +398,5 @@ div#bp-group-message-content {
 }
 
 #item-body #group-messages-container .bb-groups-messages-right > .bp-feedback {
-	margin: 20px 20px 0 20px;
+	margin: 20px 20px 20px 20px;
 }
