#T1499 Non-functional auto-suggest dropdown should not be there

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -78,6 +78,7 @@ body.groups.messages span.select2-dropdown.select2-dropdown--below {
 	padding: 5px 10px;
 	margin-right: 0;
 	max-width: 300px;
+	display: none;
 }
 
 .bb-groups-messages-right-top {
