--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -11304,6 +11304,7 @@ body.groups.messages span.select2-dropdown.select2-dropdown--below {
   padding: 5px 10px;
   margin-left: 0;
   max-width: 300px;
+  display: none;
 }
 
 .bb-groups-messages-right-top {
