--- a/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_groups_messages.scss
@@ -413,3 +413,40 @@ div#bp-group-message-content {
 	font-style: italic;
 	font-weight: bold;
 }
+
+.hr-text {
+	line-height: 1em;
+	position: relative;
+	outline: 0;
+	border: 0;
+	color: black;
+	text-align: center;
+	height: 1.5em;
+	opacity: .5;
+	width: 100%;
+	background: transparent;
+	margin: 0;
+	&:before {
+		content: '';
+		// use the linear-gradient for the fading effect
+		// use a solid background color for a solid bar
+		background: #818078;
+		position: absolute;
+		left: 0;
+		top: 50%;
+		width: 100%;
+		height: 1px;
+	}
+	&:after {
+		content: attr(data-content);
+		position: relative;
+		display: inline-block;
+		color: black;
+
+		padding: 0 .5em;
+		line-height: 1.5em;
+		// this is really the only tricky part, you need to specify the background color of the container element...
+		color: #818078;
+		background-color: #FFFFFF;
+	}
+}
